@@ -5,18 +5,18 @@
     <string name="about_version">Version %1$s (Build %2$d)</string>
     <string name="action_refresh">Neuladen</string>
     <string name="action_addserver">Server hinzufügen</string>
-    <string name="action_deleteserver">Server(s) löschen</string>
+    <string name="action_deleteserver">Server löschen</string>
     <string name="action_editserver">Server bearbeiten</string>
     <string name="action_about">Über diese App</string>
     <string name="action_help">Hilfe</string>
     <string name="action_privacy">Datenschutz</string>
-    <string name="icon_description">Server Bild</string>
+    <string name="icon_description">Server Logo</string>
     <string name="edit_server_name">Server Namen eingeben:</string>
     <string name="edit_server_name_hint">Mein Minecraft Server</string>
-    <string name="edit_server_address">Server Addrese eingeben:</string>
-    <string name="edit_server_address_hint">serveraddress[:port]</string>
+    <string name="edit_server_address">Server Adresse eingeben:</string>
+    <string name="edit_server_address_hint">serveradresse[:port]</string>
     <string name="userlist_header">Spieler online:</string>
     <string name="icon">Icon</string>
-    <string name="ok">OK</string>
+    <string name="ok">Ok</string>
 
 </resources>
